# Minecraft-Auto-Miner

./: .gitignore  Implementation_plan.md  README.md  docker-compose.yml  pyproject.toml
archive/: control_tuning.py  lane_controller.py  lane_planner.py  mining_profiles.py  movement_primitives.py  policy_bootstrap.py  state_machine.py  strategies.py
archive/telemetry_legacy/: schema_telemetry.sql  telemetry_inspect.py  telemetry_state_action_design_v0.2.md
config/: config.yaml
data/: bronze_ingest_state.json  control_calibration_last_run.json  control_calibration_memory.json  control_calibration_profile.json  control_tuning.json  forge_calibration_profiles.json  learned_blocking_block_ids.json  mine_bounds.json  perimeter_scout_last_run.json  perimeter_scout_memory.json  recovery_policy.json  strategy_stats.json  voxel_world_memory.json
data/control_calibration/: control_calibration_20260321T235249.807624Z.jsonl  control_calibration_20260321T235249.807624Z.summary.json  control_calibration_20260322T002937.901797Z.jsonl  control_calibration_20260322T002937.901797Z.summary.json  control_calibration_20260322T003527.142689Z.jsonl  control_calibration_20260322T003527.142689Z.summary.json  control_calibration_20260322T004816.924635Z.summary.json  control_calibration_20260322T004831.634772Z.summary.json  control_calibration_20260322T012644.644119Z.jsonl  control_calibration_20260322T012644.644119Z.summary.json  control_calibration_20260322T020053.920965Z.jsonl  (+18 more)
tree/: Minecraft_auto_miner.tree.prev.json  Minecraft_auto_miner.tree_20260330_123441.json
(+48 files in other folders)
